# fastapi-ai-chat

./: .env  .gitignore  README.md  dockerfile  pyproject.toml
app/: config.py  input.css  main.py  package.json  tailwind.config.js
app/models/: agent.py  chat.py
app/routers/: web.py  websocket.py
app/services/: agent_manager.py  chat_manager.py  connection_manager.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/templates/partials/: _chat_area.html  _left_panel.html  _left_panel_footer.html  _right_panel.html
backend/: input.css  main.py  package-lock.json
backend/models/: chat.py  llm_agent.py
backend/routers/: websocket.py
backend/services/: agent_manager.py  chat_manager.py  connection_manager.py
backend/static/css/: styles.css
backend/templates/partials/: _left_panel_footer.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  input.css  main.js  output.css
frontend/src/components/: ChatArea.vue  Header.vue  InputArea.vue  Message.vue  RightSidebar.vue  Sidebar.vue
src/: main.py
