[project]
name = "fastapi-ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "logfire[asyncpg,fastapi,sqlite3]>=2.6",
    "opentelemetry-instrumentation>=0.53b1",
    "pydantic-ai>=0.1.3",
]
